# Hustle-Ai

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
rustle-core/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
rustle-core/examples/: agent.rs  agent_with_context.rs  agent_with_eternalai.rs  agent_with_grok.rs  agent_with_loaders.rs  agent_with_ollama.rs  agent_with_tools.rs  anthropic_agent.rs  calculator_chatbot.rs  chain.rs  cohere_connector.rs  debate.rs  extractor.rs  gemini_agent.rs  gemini_embeddings.rs  loaders.rs  multi_agent.rs  multi_extract.rs  perplexity_agent.rs  rag.rs  rag_dynamic_tools.rs  sentiment_classifier.rs  simple_model.rs  vector_search.rs  vector_search_cohere.rs  xai_embeddings.rs
rustle-core/rustle-core-derive/: Cargo.toml
rustle-core/src/: agent.rs  completion.rs  extractor.rs  lib.rs
rustle-lancedb/: CHANGELOG.md  Cargo.toml  README.md
rustle-lancedb/examples/: vector_search_local_ann.rs  vector_search_local_enn.rs  vector_search_s3_ann.rs
rustle-lancedb/src/: lib.rs
rustle-lancedb/tests/: integration_tests.rs
rustle-mongodb/: CHANGELOG.md  Cargo.toml  README.md
rustle-mongodb/examples/: vector_search_mongodb.rs
rustle-mongodb/src/: lib.rs
rustle-mongodb/tests/: integration_tests.rs
rustle-neo4j/: CHANGELOG.md  Cargo.toml  README.md
rustle-neo4j/examples/: vector_search_movies_add_embeddings.rs  vector_search_movies_consume.rs  vector_search_simple.rs
rustle-neo4j/examples/display/: lib.rs
rustle-neo4j/src/: lib.rs  vector_index.rs
rustle-neo4j/tests/: integration_tests.rs
rustle-qdrant/: CHANGELOG.md  Cargo.toml  README.md
rustle-qdrant/examples/: qdrant_vector_search.rs
rustle-qdrant/src/: lib.rs
rustle-qdrant/tests/: integration_tests.rs
rustle-sqlite/: CHANGELOG.md  Cargo.toml  README.md
rustle-sqlite/examples/: vector_search_sqlite.rs
rustle-sqlite/src/: lib.rs
rustle-sqlite/tests/: integration_test.rs
(+9 files in other folders)
